# qt3dfontloft

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_cmake.cmd  build_cmake.sh  clang-tidy.cmd  doxygen.conf
data/: char_Q.json  char_R.json  char_W.json  char_Z.json  char_a.json  char_b.json  char_i.json  char_t.json
res/: resources.qrc
src/: colorgenerator.cpp  colorgenerator.h  contour.cpp  contour.h  contoursplitter.cpp  contoursplitter.h  contourtools.cpp  contourtools.h  duration.cpp  duration.h  geo.cpp  geo.h  glmesh3d.cpp  glmesh3d.h  glviewwidget.cpp  glviewwidget.h  json.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh3d.cpp  mesh3d.h  mesh3dbuilder.cpp  mesh3dbuilder.h  mesh3dsaver.cpp  mesh3dsaver.h  meshclip.cpp  meshclip.h  meshtools.cpp  meshtools.h  meshtrianglebuilder.cpp  meshtrianglebuilder.h  plane3d.cpp  plane3d.h  testclip.cpp  testclip.h  testmain.cpp
